syntax = "proto3";

option java_multiple_files = true;
option java_package = "de.rafael.atomic.cloud.grpc.server";

package server;
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service ServerService {
    // Server Lifecycle
    /// Heartbeat
    rpc BeatHeart(google.protobuf.Empty) returns (google.protobuf.Empty);

    /// Ready
    rpc MarkReady(google.protobuf.Empty) returns (google.protobuf.Empty);
    rpc MarkNotReady(google.protobuf.Empty) returns (google.protobuf.Empty);

    /// Health
    rpc MarkRunning(google.protobuf.Empty) returns (google.protobuf.Empty);
    rpc RequestSoftStop(google.protobuf.Empty) returns (google.protobuf.Empty); // Implies not ready
    rpc RequestHardStop(google.protobuf.Empty) returns (google.protobuf.Empty); // Implies not ready
}